--- a/index.css
+++ b/index.css
@@ -4,19 +4,59 @@
 img{
 	width: 100%;
 }
+body{
+	background-image: url("images/fondo.png");
+}
+
+
 
 header{
-	background-color: tomato;
+	height: 180px;
+
 }
 header img{
-	margin: auto;
+	width: 20%;	
+
+}
+
+.logo{
+	width: 80%;
+	float: left;
+}
+.logo img{
 	display: block;
-	width: 15%;
+	margin-top: 20px;
+	margin-left: 100px;
+	margin-right: auto;
+}
+
+.tel-logo{
+	width: 20%;
+	float: right;
+	font-size: 2.3em;
+	font-family: inherit;
+	text-align: left;
+	padding-top: 40px;
+	color: white;
+
+}
+
+
+
+
+
+
+
+h1{
+	font-family: impact;
+	font-size: 3em;
+	text-align: center;
 }
 
 .botonera{
+	clear: both;
 	width:100%;
-	background-color:black;
+	background-color:#A9F5A9;
 	box-sizing:border-box;
 	margin:0;
 	-webkit-transition: all ease .3s;
@@ -36,22 +76,27 @@ header img{
 	display:flex;
 }
 
+
 .botonera li{
 	flex-grow:1;
 	list-style:none;
 }
 .botonera a{
-	font-family: verdana;
+	font-family: inherit;
 	font-size: 1.3em;
 	text-align: center;
 	display: block;
 	padding-top: 28px;
 	padding-bottom:28px;
-	color:white;
+	color:black;
 	text-decoration:none;
-	border-right: 2px solid white; 
+	border-right: 1px solid black; 
    
 
+}
+
+#sinborde{
+	border-right: none;
 }
 
 
@@ -72,7 +117,7 @@ header img{
 
 #servicios h1{
 	font-family: impact;
-	font-size: 7em;
+	font-size: 3em;
 	text-align: center;
 }
 
@@ -82,7 +127,7 @@ header img{
 	text-align: center;
 }
 .gremio h2{
-	font-size: 6em;
+	font-size: 2em;
 }
 
 
@@ -105,7 +150,6 @@ header img{
 
 
 #proyectos-items{
-	background-color: tomato;
 	display: flex;
 	margin:10px;
 	margin-top: 50px;
@@ -114,33 +158,255 @@ header img{
 
 #proyectos h1{
 	font-family: impact;
-	font-size: 7em;
+	font-size: 3em;
 	text-align: center;
 }
 
 .items{
 	text-align: center;
 	margin: auto;
-	border: 3px solid black;
+	
+	margin-left:10px;
+	border-radius: 100%;
+	width: 50%;
+	
 }
 .items p{
-	font-size: 1.3em;
+	font-size: 1em;
 	font-family: cooper;
 	text-align: center;
+	margin-top: 150px;
 }
+.items img{
+	width: 150px;
+	margin:auto;
+}
+
 
 #proyectos h2{
 	text-align: center;
 	font-family: impact;
 	margin-top: 10px;
-	font-size: 3em;
+	font-size: 2em;
 }
 
 .conexion{
-	display: none;
 }
 
 #servicios{
 	border:5px solid black;
 	margin-top: 200px;
 }
+.grow:hover
+{
+-webkit-transform: scale(1.2);
+-ms-transform: scale(1.2);
+transform: scale(1.2);
+}
+
+#contacto{
+	border:5px solid black;
+	margin-top: 200px; 
+}
+
+.contacto{
+	text-align:center;
+	/* background-color:red; */
+}
+.contacto h2{
+	font-family:impact;
+	font-size:2em;
+	
+}
+.contacto h3{
+	font-size:1.5em;
+	/* background-color:green; */
+	text-align:left;
+	padding-left:150px;
+
+}
+.contacto img{
+	
+}
+
+.titulo{
+	margin-left:auto;
+	margin-right:auto;
+	text-align:center;
+	background-color:peru;
+}
+#contacto{
+	display: flex;
+	background-color: white;
+	color: black;
+}
+.contactame{
+	/* background-color:blue; */
+	text-align:center;
+	width: 35%;
+	border:1px solid black;
+
+	/* padding-left:250px; */
+	/* border-top:3px dashed black; */
+	/* padding-bottom:25px; */
+}
+.contactame h2{
+	font-family:impact;
+	font-size:2em;
+	
+	/* background-color:green; */
+}
+
+
+.datos{
+	/* background-color:red; */
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+	font-size:1.5em;
+}
+.datos span{
+	margin-bottom:20px;
+	font-family:arial;
+}
+.datos input{
+	margin-bottom:12px;
+}
+.enviar{
+	margin-top:20px;
+	width:200px;
+	height:40px;
+}
+
+.reset{
+	margin-top:20px;
+	width:200px;
+	height:40px;
+}
+
+.mod{
+	width:300px;
+	height:30px;
+}
+
+.mud{
+	width:150px;
+	height:30px;
+}
+
+#contacto{
+	width: 90%;
+	margin-top: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
+
+.datos-contacto{
+	width: 35%;
+	border:2px solid black;
+	
+
+
+}
+.datos-contacto h2{
+	font-family:impact;
+	font-size:2em;
+	text-align: center;
+}
+.datos-contacto img{
+	width: 24px;
+	margin-bottom: 30px;
+	margin-left: 20px;
+	margin-right: 15px;
+}
+
+.datos-contacto p{
+
+	font-size: 1.4em;
+	
+}
+
+.datos-contacto span{
+	color: blue;
+	font-family: inherit;
+}
+.ubicacion{
+	width: 30%;
+}
+.ubicacion h2{
+	font-family:impact;
+	font-size:2em;
+	text-align: center;
+
+}
+.pack{
+	margin-top: 30px;
+}
+
+footer{
+	background-color: grey;
+	width: 100%;
+	margin-top: 200px;
+
+}
+.nosotros{
+	width: 35%;
+	float: left;
+	text-align: center;
+	color: white;
+}
+.nosotros img{
+	width: 40px;
+	margin: auto;
+	margin-right: 25px;
+	margin-left: 25px;
+}
+.nosotros a{
+	margin:40px;
+
+}
+
+.newsletter{
+	width: 35%;
+	text-align: center;
+	float: left;
+	border:1px solid black;
+}
+.newsletter p{
+	color: white;
+}
+.newsletter h2{
+	color: white;
+}
+.submit{
+	margin-left:15px;
+}
+.copry{
+	width: 30%;
+	text-align: center;
+	float: right;
+	padding-top:50px;
+	border:1px solid black;
+}
+.copry p{
+	color: white;
+}
+
+footer h2{
+	font-size: 2em;
+	font-family: impact;
+}
+
+footer p{
+	font-size: 1.5em;
+	font-family: inherit;
+}
+.container-pie{
+	border:2px solid black;
+	height: 160px;
+	background-color: black;
+}
+
